--- a/ultimate-screen-seats-frontend/package.json
+++ b/ultimate-screen-seats-frontend/package.json
@@ -9,8 +9,10 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@nextui-org/avatar": "^2.2.4",
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/code": "2.2.3",
+		"@nextui-org/dropdown": "^2.3.7",
 		"@nextui-org/input": "2.4.3",
 		"@nextui-org/kbd": "2.2.3",
 		"@nextui-org/link": "2.2.3",
