--- a/ultimate-screen-seats-frontend/package.json
+++ b/ultimate-screen-seats-frontend/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@nextui-org/avatar": "^2.2.4",
 		"@nextui-org/button": "2.2.3",
+		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
 		"@nextui-org/dropdown": "^2.3.7",
 		"@nextui-org/input": "2.4.3",
@@ -28,6 +29,7 @@
 		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
+		"lucide-react": "^0.468.0",
 		"next": "15.0.4",
 		"next-themes": "^0.4.4",
 		"react": "18.3.1",
