--- a/ultimate-screen-seats-frontend/package.json
+++ b/ultimate-screen-seats-frontend/package.json
@@ -14,12 +14,14 @@
 		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
 		"@nextui-org/dropdown": "^2.3.7",
+		"@nextui-org/image": "^2.2.3",
 		"@nextui-org/input": "2.4.3",
 		"@nextui-org/kbd": "2.2.3",
 		"@nextui-org/link": "2.2.3",
 		"@nextui-org/listbox": "2.3.3",
 		"@nextui-org/navbar": "2.2.3",
 		"@nextui-org/snippet": "2.2.4",
+		"@nextui-org/spinner": "^2.2.4",
 		"@nextui-org/switch": "2.2.3",
 		"@nextui-org/system": "2.4.3",
 		"@nextui-org/tabs": "^2.2.5",
