--- a/ultimate-screen-seats-frontend/package.json
+++ b/ultimate-screen-seats-frontend/package.json
@@ -9,10 +9,13 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@internationalized/date": "^3.6.0",
 		"@nextui-org/avatar": "^2.2.4",
 		"@nextui-org/button": "2.2.3",
 		"@nextui-org/card": "^2.2.7",
 		"@nextui-org/code": "2.2.3",
+		"@nextui-org/date-input": "^2.3.8",
+		"@nextui-org/date-picker": "^2.3.9",
 		"@nextui-org/dropdown": "^2.3.7",
 		"@nextui-org/image": "^2.2.3",
 		"@nextui-org/input": "2.4.3",
@@ -28,6 +31,7 @@
 		"@nextui-org/tabs": "^2.2.5",
 		"@nextui-org/theme": "2.4.1",
 		"@nextui-org/tooltip": "^2.2.6",
+		"@react-aria/i18n": "^3.12.4",
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
 		"clsx": "2.1.1",
