--- a/ultimate-screen-seats-frontend/package.json
+++ b/ultimate-screen-seats-frontend/package.json
@@ -35,6 +35,7 @@
 		"@react-aria/ssr": "3.9.7",
 		"@react-aria/visually-hidden": "3.8.18",
 		"clsx": "2.1.1",
+		"embla-carousel-react": "^8.5.2",
 		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
 		"jwt-decode": "^4.0.0",
