--- a/ultimate-screen-seats-frontend/package.json
+++ b/ultimate-screen-seats-frontend/package.json
@@ -9,6 +9,14 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
+		"@heroui/chip": "^2.2.6",
+		"@heroui/input": "^2.4.9",
+		"@heroui/modal": "^2.2.7",
+		"@heroui/pagination": "^2.2.8",
+		"@heroui/popover": "^2.3.9",
+		"@heroui/select": "^2.4.9",
+		"@heroui/table": "^2.2.8",
+		"@heroui/user": "^2.2.6",
 		"@internationalized/date": "^3.6.0",
 		"@nextui-org/avatar": "^2.2.4",
 		"@nextui-org/button": "2.2.3",
